<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TenPercent">10%</string>
    <string name="FifteenPercent">15%</string>
    <string name="TwentyPercent">20%</string>
    <string name="amtValue">Enter Amount here</string>
    <string name="tipValue">FinalValue</string>
    <string name="funcTip">calculateTip</string>

</resources>
