<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnTenPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="103dp"
        android:layout_marginLeft="40dp"
        android:onClick="@string/funcTip"
        android:text="@string/TenPercent" />

    <Button
        android:id="@+id/btnFifteenPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnTenPercentage"
        android:layout_alignTop="@+id/btnTenPercentage"
        android:layout_toRightOf="@+id/btnTenPercentage"
        android:onClick="@string/funcTip"
        android:text="@string/FifteenPercent" />

    <Button
        android:id="@+id/btnTwentyPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnFifteenPercentage"
        android:layout_alignBottom="@+id/btnFifteenPercentage"
        android:layout_toRightOf="@+id/btnFifteenPercentage"
        android:onClick="@string/funcTip"
        android:text="@string/TwentyPercent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:ems="10"
        android:hint="@string/amtValue" />

    <TextView
        android:id="@+id/tvFinalAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/tipValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
